[gd_scene load_steps=6 format=2]

[ext_resource path="res://recursos/botones/spt_BtnCambiarEscena.gd" type="Script" id=1]
[ext_resource path="res://recursos/imagenes/registro/btn_Registro.png" type="Texture" id=2]
[ext_resource path="res://recursos/imagenes/fondos/bkd_Pantalla_Inicio.png" type="Texture" id=3]
[ext_resource path="res://recursos/imagenes/img_Logo.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[node name="Control" type="Control"]
margin_left = 4.0
margin_right = 1917.0
margin_bottom = 1085.0
rect_pivot_offset = Vector2( -1199, -136 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1086.0
custom_styles/panel = SubResource( 1 )

[node name="btnCambiarEscena" type="TouchScreenButton" parent="Panel"]
position = Vector2( 1091, 516 )
scale = Vector2( 0.443721, 0.422535 )
normal = ExtResource( 2 )
script = ExtResource( 1 )
escena_ruta = "res://escenas/datos/formulario.tscn"

[node name="Sprite" type="Sprite" parent="Panel/btnCambiarEscena"]
position = Vector2( 507.075, -525.4 )
scale = Vector2( 0.694106, 0.558155 )
texture = ExtResource( 4 )

[connection signal="pressed" from="Panel/btnCambiarEscena" to="Panel/btnCambiarEscena" method="_BtnCambiarEscena_presionado"]
