[gd_scene load_steps=2 format=2]

[ext_resource path="res://recursos/botones/spt_BtnCambiarEscena.gd" type="Script" id=1]

[node name="btn_CambiarEscena" type="Node2D"]
script = ExtResource( 1 )

[node name="botonTouch" type="TouchScreenButton" parent="."]

[connection signal="pressed" from="botonTouch" to="." method="_btn_presionado"]
